@@ -159,10 +159,9 @@ zkTimeout=10000
 # the limitation of number of index pages.
 # pageLimit=-1
 
-#If all ledger directories configured are full, then support only read 
-#requests for clients.
+#If all ledger directories configured are full, then support only read requests for clients.
 #If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted
-#to read-only mode and serve only read requests. Else bookie will get shutdown.
+#to read-only mode and serve only read requests. Otherwise the bookie will be shutdown.
 #By default this will be disabled.
 #readOnlyModeEnabled=false
 
